# Guitar-Pedal-App

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/dsp/: CustomReverb.cpp  Overdrive.cpp
src/effects/: BaseEffects.h  CustomReverb.h  Overdrive.h
src/pedalGUI/: OverdriveComponent.cpp  OverdriveComponent.h  PedalComponent.cpp  PedalComponent.h
src/pedalSoundEffects/: BluesDriver.h  Chorus.h  CustomReverb.cpp  CustomReverb.h  Delay.h  Distortion.h  Phaser.h  Tremolo.h
